objects/DailyActualSales__x.object
<CustomObject>
    <description>DailyActualSales</description>
    <externalDataSource>TED_1_0_SFI_Daily_Monthly_Actual_Sales_Data</externalDataSource>
    <externalName>DailyActualSales</externalName>
    <fields>
        <fullName>Forecast__c</fullName>
        <externalDeveloperName>SFDC_EXTERNAL_ID</externalDeveloperName>
        <label>Forecast</label>
        <length>255</length>
        <referenceTargetField>Forecast__c.External_ID__c</referenceTargetField>
        <referenceTo>Forecast__c</referenceTo>
        <relationshipLabel>DailyActualSales</relationshipLabel>
        <relationshipName>DailyActualSales</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>MONTH_ID__c</fullName>
        <description>MONTH_ID</description>
        <externalDeveloperName>MONTH_ID</externalDeveloperName>
        <label>MONTH_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTD_AMOUNT__c</fullName>
        <description>MTD_AMOUNT</description>
        <externalDeveloperName>MTD_AMOUNT</externalDeveloperName>
        <label>MTD_AMOUNT</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC_EXTERNAL_ID__c</fullName>
        <description>SFDC_EXTERNAL_ID</description>
        <externalDeveloperName>SFDC_EXTERNAL_ID</externalDeveloperName>
        <label>SFDC_EXTERNAL_ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YEAR_ID__c</fullName>
        <description>YEAR_ID</description>
        <externalDeveloperName>YEAR_ID</externalDeveloperName>
        <label>YEAR_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DailyActualSales</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ExternalId</columns>
        <columns>DisplayUrl</columns>
        <columns>SFDC_EXTERNAL_ID__c</columns>
        <columns>MONTH_ID__c</columns>
        <columns>MTD_AMOUNT__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>DailyActualSales</pluralLabel>
</CustomObject>